# collie

./: .editorconfig  .gitignore  LICENSE  README.md
.github/workflows/: deploy-document.yml
compiler/: .gitignore  CMakeLists.txt  README.md  main.cpp
compiler/examples/: simple-code.collie
compiler/ir/: CMakeLists.txt  README.md  ir_generator.cpp  ir_generator.h  ir_node.cpp  ir_node.h  ir_optimizer.cpp  ir_optimizer.h
compiler/lexer/: CMakeLists.txt  README.md  lexer.cpp  lexer.h  token.cpp  token.h
compiler/parser/: CMakeLists.txt  README.md  ast.cpp  ast.h  parser.cpp  parser.h
compiler/semantic/: CMakeLists.txt  README.md  analyzer.cpp  analyzer.h  semantic_analyzer.cpp  semantic_analyzer.h  semantic_common.cpp  semantic_common.h  symbol_table.cpp  symbol_table.h
compiler/tests/: CMakeLists.txt  ir_block_merging_test.cpp  ir_constant_folding_test.cpp  ir_cse_test.cpp  ir_dead_code_elimination_test.cpp  ir_generator_test.cpp  ir_loop_invariant_motion_test.cpp  ir_loop_optimizer_test.cpp  ir_loop_unrolling_test.cpp  ir_node_test.cpp  ir_optimizer_test.cpp  ir_optimizer_test_base.h  ir_strength_reduction_test.cpp  lexer_test.cpp  parser_test.cpp  semantic_analyzer_test.cpp  semantic_error_test.cpp  semantic_recovery_test.cpp  semantic_test.cpp  symbol_table_test.cpp  test.collie  test_utils.cpp  test_utils.h
compiler/utils/: CMakeLists.txt  README.md  token_utils.cpp  token_utils.h  version_info.cpp  version_info.h
docs/: CandidateNames.md  HelpfulTools.md  LanguageGrammer.md  README.md  index.html
docs/ImplementationDetails/: EncodingUsedByDifferentLanguagesOrOperatingSystems.md  Unicode.md
docs/Includes/: LanguageFeature.md  ProjectStructure.md
docs/Internal/: CompileAndRun.md  DevelopmentGuide.md
docs/Others/: CandidateNames.md  OtherLanguageImpliments.md  WorkProgress.md  index.md
docs/Specification/: CodeCommitSpecification.md
document/: .npmrc  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
document/blog/: 2025-03-22-hello-world.md  authors.yml  tags.yml
document/docs/community/: compile-and-run.md  contribute.md  development-guide.md  intro.md
document/docs/community/contribute/: code-commit-specification.md  contribute-document.md  contribute.md
document/docs/contribute/: community.md  intro.md  license.md  logo.md  project-structure.md  roadmap.md  work-progress.md
document/docs/contribute/_includes/: _ProjectStructure.md
document/docs/contribute/contribute/: contribute.md
document/docs/contribute/contribute/contribute-code/: compile-and-run.md  development-guide.md  index.md
document/docs/contribute/vulnerability-report​​/: index.md
document/docs/eco/: code-obfuscation.md  collie-version-manager.md  package-manager.md
document/docs/eco/editor-support/: index.md
document/docs/eco/editor-support/idea/: index.md
document/docs/eco/editor-support/vscode/: how-to-run-test-case.md  index.md
document/docs/grammer/: intro.md
document/docs/grammer/data-type/: 03-character.md  06-bitwise.md  07-buffer.md  12-union.md  99-others.md  index.md
document/docs/implementation-details/: encoding-used-by-different-languages-or-operating-systems.md  unicode.md
document/docs/others/: CandidateNames.md  HelpfulTools.md  OtherLanguageImpliments.md  Visual Studio 调试指南.md  candidate-names.md  domain.md  draft.md  helpful-tools.md  index.md  other-language-implements.md  prompt.md  reference-docs.md
document/docs/reference/: intro.md
document/docs/reference/data-type/: 01-base.md  02-none.md  03-character.md  04-numeric.md  05-logical.md  07-buffer.md  11-container.md  12-union.md  99-others.md
document/docs/reference/data-type/11-container/: index.md
document/docs/reference/data-type/primitive-data-type/: 02-none.md  03-character.md  05-logical.md  06-bitwise.md  07-enum.md  index.md
document/docs/reference/data-type/reference-data-type/: 03-tuple.md  05-buffer.md  index.md
document/docs/reference/embedding/: index.md
document/docs/reference/embedding/embedder-api/: cplusplus-embedder-api.md  index.md
document/docs/reference/grammer/: assert.md  basic-grammer.md  control-flow.md  error-handling.md  function.md  more.md  regex.md  syntax.md
document/docs/reference/standard-library/: index.md
document/docs/reference/standard-library/01-lang/: 01-collection.md  02-time.md  index.md
document/docs/reference/standard-library/02-io/: index.md
document/docs/reference/standard-library/03-math/: index.md
document/docs/reference/standard-library/04-crypto/: index.md
document/docs/reference/standard-library/04-net/: index.md
document/docs/reference/standard-library/09-id/: index.md
document/docs/reference/uncategorized-documents/: draft.md  draft2.md  index.md
document/docs/tutorial/: advanced-feature-tutorial.md  basic-grammar-tutorial.md  debugger.md  intro.md  quick-start.md
document/docs/tutorial/_includes/: _LanguageFeature.md
document/docs/tutorial/environment-setup/: index.md
document/i18n/: README.md
document/i18n/zh-Hans/: code.json
document/i18n/zh-Hans/docusaurus-plugin-content-blog/: 2025-03-22-hello-world.md  authors.yml
document/i18n/zh-Hans/docusaurus-plugin-content-docs/: current.json
document/i18n/zh-Hans/docusaurus-theme-classic/: footer.json  navbar.json
document/patches-history/: @easyops-cn+docusaurus-search-local+0.52.1.patch
document/src/components/: prism-collie.ts
document/src/components/SinceBadge/: index.tsx  styles.module.css
document/src/css/: custom.css  font.css
document/src/pages/: _index-content.en.md  _index-content.zh-Hans.md  index.module.css  index.tsx
document/src/theme/: prism-include-languages.ts
document/src/theme/DocItem/: index.tsx
editor-support/vscode/: DevelopmentGuide.md  README.md
editor-support/vscode/collie-language-support/: CHANGELOG.md  README.md  package-lock.json  package.json  vsc-extension-quickstart.md
editor-support/vscode/collie-language-support/syntaxes/: collie.tmLanguage.json
editor-support/vscode/collie-language-support/tests/: run-tests.js
editor-support/vscode/test/: test-code.collie
(+120 files in other folders)
